--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
     <string name="delete_label">Delete Item</string>
     <string name="delete_shortcut">d</string>
 
+    <string name="share_label">Share Item</string>
+    <string name="share_shortcut">i</string>
+
     <string name="search_label">Search</string>
     <string name="search_shortcut">s</string>
 
@@ -92,4 +95,5 @@
     <string name="item_edit_desirability_label">Desirability</string>
     <string name="item_edit_barcode_label">Barcode/ISBN</string>
     <string name="item_edit_notes_label">Notes</string>
+    <string name="item_edit_share_content">From my wish list...</string>
 </resources>
